sidusin api serverit andmebaasiga. Panin index lehe välja messy_data.jsoni sisu. API saadab JSON'i Web Serverisse.  Vähemalt miskit sai tehtud.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:api": "npm run dev --workspace:api",
-    "dev:web": "npm run dev --workspace:web",
-    "start": "concurrently \"npm run dev:api\" npm run dev:web\""
+    "dev:api": "npm run dev --workspace=api",
+    "dev:web": "npm run dev --workspace=web",
+    "start": "concurrently \"npm run dev:api\" \"npm run dev:web\""
   },
   "repository": {
     "type": "git",
